header and h1 fixed for small screens, added spacing for parent1, changed border color of  button2

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,8 +39,6 @@ body {
   font-family: Poppins;
   max-width: 1200px;
   margin: 0 auto;
-  display: grid;
-  gap: 1rem;
 }
 
 .logo-and-h1{
@@ -111,7 +109,7 @@ h3{
   display:grid;
   grid-template-columns: 1fr 1fr; 
   gap: 1rem;
-  padding:0;
+  padding:1rem;;
 }
 
 .parent1 p{
@@ -171,7 +169,7 @@ h3{
 
 .button2{
   background-color: var(--royalblue);
-  border: 3px solid var(--darkblue);
+  border: 3px solid var(--royalblue);
   border-radius: 10px;
   color: var(--white);
   display: inline;
@@ -219,6 +217,12 @@ footer p{
   header{
       justify-content: center;
       align-items: flex-end;
+  }
+  .logo-and-h1{
+    justify-content: center;
+  }
+  h1{
+    font-size:xx-large;
   }
   nav ul{
     justify-content: center;
